--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
-body \{\
-  font-family: system-ui;\
-  background: #f06d06;\
-  color: white;\
-  text-align: center;\
-\}}
+body {
+  font-family: system-ui;
+  background: #f06d06;
+  color: orange;
+  text-align: center;
+}
