--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ button {
   font-size: 16px;
   text-transform: uppercase;
   background-color: #ff5722;
-  color: #000000;
+  color: #fff;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
