--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
   font-size: 36px;
   text-align: center;
   margin-bottom: 20px;
-  color: #000000;
+  color: #ff5722;
 }
 
 .input-section {
@@ -31,8 +31,8 @@ input[type="text"] {
   padding: 10px;
   font-size: 16px;
   border: none;
-  background-color: #000000;
-  color: #000000;
+  background-color: #333;
+  color: #fff;
 }
 
 button {
