--- a/style.css
+++ b/style.css
@@ -87,4 +87,6 @@ body {
   background-image: url('logo.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.5); /* Valore RGBA per trasparenza */
+}
 }
