--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ input[type="text"] {
   font-size: 16px;
   border: none;
   background-color: #333;
-  color: #fff;
+  color: #000;
 }
 
 button {
