--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
   font-size: 36px;
   text-align: center;
   margin-bottom: 20px;
-  color: #000000;
+  color: #ffffff;
 }
 
 .input-section {
