--- a/style.css
+++ b/style.css
@@ -89,6 +89,33 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #fff; /* Valore RGBA per trasparenza */
- 
 }
+
+/* Stile per la tabella delle frequenze FPV */
+#frequency-table {
+  width: 100%;
+  margin-top: 40px;
+  border-collapse: collapse;
+}
+
+#frequency-table caption {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
+
+#frequency-table thead {
+  background-color: #ff5722;
+}
+
+#frequency-table th {
+  padding: 10px;
+  text-align: left;
+  color: #fff;
+}
+
+#frequency-table tbody td {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
 }
